@@ -1,13 +1,12 @@
 Package: MSstatsTMT
 Title: Protein Significance Analysis in shotgun mass spectrometry-based proteomic experiments with tandem mass tag (TMT) labeling
-Version: 1.8.0
-Date: 2020-10-13
+Version: 1.8.1
+Date: 2020-12-10
 Description: Tools for protein significance analysis in shotgun mass spectrometry-based proteomic experiments with tandem mass tag (TMT) labeling.
 Authors@R: c(person("Ting", "Huang", email = "thuang0703@gmail.com", role=c("aut","cre")),
 	person("Meena", "Choi", email = "mnchoi67@gmail.com", role="aut"),
 	person("Sicheng", "Hao", email = "hao.sic@husky.neu.edu", role = "aut"),
 	person("Olga", "Vitek", email = "o.vitek@northeastern.edu", role = "aut"))
-Maintainer: Ting Huang <thuang0703@gmail.com>
 License: Artistic-2.0
 Depends: R (>= 4.0)
 Imports: limma, lme4, lmerTest, dplyr, tidyr, statmod, methods,
@@ -19,4 +18,4 @@ Encoding: UTF-8
 LazyData: true
 URL: http://msstats.org/msstatstmt/
 BugReports: https://groups.google.com/forum/#!forum/msstats
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
